--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           FILE_PATH="src/calc.py"
           CODE_CONTENT=$(sed 's/"/\\"/g' src/calc.py)
 
-          curl -X POST "https://dressiest-terese-nontemperable.ngrok-free.dev/api/send_ci_failure" \
+          curl -X POST "https://dressiest-terese-nontemperable.ngrok-free/api/send_ci_failure" \
             -H "Content-Type: application/json" \
             -d "{
               \"repo_owner\": \"anjalikasingh2003\",
