--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r req.txt
-
+      - name: Add project root to PYTHONPATH
+        run: echo "PYTHONPATH=$(pwd)/src" >> $GITHUB_ENV
       # ---- RUN TESTS (Expected to fail) ----
       - name: Run tests
         id: runcmd
